risolve issue della buil di produzione: bordi alle row della pagina di login + Website breaks on refreshing any page other than base URL

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -35,7 +35,7 @@
 
 .input-div {
     font-size:18px !important;
-    border: 1px, solid, #dedede !important;
+    /* border: 1px, solid, #dedede !important; */
     text-align: center;
    
 }
